# python-for-math-science-and-engineering

./: .gitignore  Pipfile  README.md  exercise1.py  exercise3.py  exercise5.py  exercise7.py  test_exercises.py
basic/: exercise2.py  exercise6.py  test_exercises.py
crash_course/: 02-Python Crash Course Exercises.ipynb
numpy/: 02-Numpy Indexing and Selection.ipynb  04-Numpy Exercises.ipynb
session-2/: README.md  requirements.txt
session-2/basic/: exercise7.py  test_exercises.py
session-2/crash_course/: 02-Python Crash Course Exercises.ipynb
session-3/: README.md  lab_age.py  lab_bmi.py  lab_check_stage.py  lab_file_reverser.py  lab_search_words.py  lab_sys_argv.py  products_csv_parser.py  pyproject.toml  requirements.txt  test_lab_bmi.py  test_lab_check_stage.py
session-3/tests/: test_lab_age.py
session-4/: 1_Intro_to_Python.ipynb  2_Explore_Forbes_Celebrity_List.ipynb  3_Explore_Wikipedia_Edits.ipynb  4a_Wikipedia_Metrics_Table.ipynb  4b_Wikipedia_Metrics_Plots.ipynb  5_Celebrity_Edits_Time_Series.ipynb  README.md  pyproject.toml
session-5/: 1.py  2.py  3.py  bs4_labs_challenge3.py  bs4_labs_challenge3_extra.py  bs4labs.py  challenge_6.py  context_manager_labs.py  context_manager_labs_challenge.py  debug_input_and_output.py  decoratorlabs.py  end_to_end.py  end_to_end_extra_challenge.py  final_challenge.py  method_chaining.py  pyproject.toml  requests_lab.py  scratch.py
