[tool.poetry]
name = "python-for-scripting"
version = "0.1.0"
description = ""
authors = ["Zorex Salvo <zorexsalvo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
faker = "^4.0.2"
pytest-cov = "^2.8.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
